--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-router": "^5.2.0",
     "react-scripts": "3.4.3",
     "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0",
     "yup": "^0.29.3"
   },
